--- a/css/style.css
+++ b/css/style.css
@@ -148,3 +148,20 @@ a {
   margin: 10px 25px;
   text-decoration: none;
 }
+//make the website adjust scrren to screen size
+@media all and (max-width: 700px) {
+
+    header {
+        height: 90px; * Earlier 120px*/
+        line-height: 90px; * Earlier 120px*/
+    }
+
+        header span {
+            font-size: 20px; /* Earlier 30px*/
+        }
+
+    .des {
+        width: 50%; /* Earlier 70%*/
+        background-color: #e9e9e9;
+    }
+} 
